# Perfos

./: .gitignore  Cargo.toml  README.md  tmux-workspace.sh
.github/workflows/: test-lint-audit.yml
examples/: main.rs
src/: benchmark.rs  console_ui.rs  constants.rs  histogram.rs  lib.rs  main.rs  message_handler.rs  table.rs  time_utils.rs
tasks/: v0.1.0.json
