[package]
name = "perfos"
description = "Benchmark parts of your Rust code with stats insights"
version = "0.2.4"
authors = ["Mike AUBENAS"]
edition = "2021"
readme = "README.md"
rust-version = "1.83.0"
repository = "https://github.com/MikyStar/Perfos"
license = "MIT"

[dev-dependencies]
rusty-hook = "^0.11.2"

[dependencies]
ascii_table = { version = "4.0.6", features = ["auto_table_width", "color_codes"] }
crossterm = "0.29.0"
humanize-duration = "0.0.6"
strip-ansi-escapes = "0.2.1"
