[package]
name = "perfos"
description = "Benchmark parts of your Rust code with stats insights"
version = "0.3.1"
authors = ["Mike AUBENAS"]
edition = "2021"
readme = "README.md"
rust-version = "1.83.0"
repository = "https://github.com/MikyStar/Perfos"
license = "MIT"

[dev-dependencies]
rusty-hook = "^0.11.2"

[dependencies]
crossterm = "0.29.0"
humanize-duration = "0.0.7"
strip-ansi-escapes = "0.2.1"
unicode-width = "0.2.2"
